# btx

./: .gitignore  LICENSE  README.md  btx.cabal  stack.yaml
app/: Main.hs
res/help/: copying.txt
src/: BibTeXParser.hs  Commands.hs  Controller.hs  Core.hs  CoreIO.hs  Formatting.hs  Help.hs  Main.hs  Types.hs
src/BibTeX/: Parser.hs  Resources.hs
src/Controller/: BtxMonad.hs  BtxStateMonad.hs  Commands.hs  Controller.hs  ErrMonad.hs  External.hs
src/Model/: BtxState.hs  Macros.hs  Matcher.hs  Types.hs
src/Model/BibTeX/: Parser.hs  Resources.hs
src/Model/Core/: Core.hs  ErrMonad.hs  External.hs  Formatting.hs  Matcher.hs  ScriptParser.hs  Types.hs
src/Model/Core/Messages/: Copying.hs  Help.hs
src/Model/CoreIO/: CoreIO.hs  ErrMonad.hs  External.hs
src/Model/Parsers/: BibTex.hs  Config.hs  Core.hs  Scripts.hs
src/Resources/: Resources.hs
src/View/: Copying.hs  Core.hs  Help.hs  View.hs
test/: BasicScripts.hs  Main.hs  MatcherTests.hs  ScriptParsing.hs  scripts.txt
test/Mock/: MockApp.hs  scripts.txt
test/Mock/bib/: testBib-doi.bib  testBib-find1.bib  testBib-formatted.bib  testBib-renaming.bib  testBib.bib  testExportBib-renaming.bib
test/Mock/configs/: mock_config_1  mock_config_2  mock_config_3  mock_config_4
test/ModelSpec/: Matcher.hs
test/ModelSpec/Parsers/: Config.hs  Scripts.hs
test/bib/: testBib-find2.bib  testBib-formatted.bib  testBib-renaming.bib  testBib.bib  testExportBib-masked.bib  testExportBib-renaming.bib
test/scripts/: script-doi.txt  script-formatted.txt  script-renaming.txt  script-sendto.txt  script-tosend.txt
