name:                   btx
version:                0.1.0.0
description:            See README <https://github.com/MWRuszczycky/btx#readme>
homepage:               https://github.com/MWRuszczycky/btx#readme
bug-reports:            https://github.com/MWRuszczycky/btx/issues
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2018 Mark W. Ruszczycky
license:                BSD3
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md

executable btx
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2
  build-depends:        base >=4.7 && <5
                      , btx-internal
                      , mtl

library btx-internal
  exposed-modules:      Commands
                      , Controller
                      , Model.Core.Types
                      , Model.BibTeX.Parser
                      , Model.BibTeX.Resources
                      , Model.Core.Core
                      , Model.Core.ScriptParser
                      , Model.Core.Formatting
                      , Model.Core.Messages.Help
                      , Model.Core.Messages.Copying
                      , Model.CoreIO.CoreIO
                      , Model.CoreIO.External
                      , Model.CoreIO.ErrMonad
                      , Paths_btx
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <5
                      , attoparsec
                      , bytestring
                      , containers
                      , directory
                      , microlens
                      , mtl
                      , process
                      , temporary
                      , text
                      , wreq
