name:                   btx
version:                1.3.0
description:            See README <https://github.com/MWRuszczycky/btx#readme>
homepage:               https://github.com/MWRuszczycky/btx#readme
bug-reports:            https://github.com/MWRuszczycky/btx/issues
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2018 Mark W. Ruszczycky
license:                BSD3
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md

executable btx
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2 -W
  build-depends:        base >=4.7 && <5
                      , btx-internal
                      , mtl
                      , text

library btx-internal
  exposed-modules:      Controller.Commands
                      , Controller.Controller
                      , Controller.BtxStateMonad
                      , Model.BtxState
                      , Model.Core.External
                      , Model.Core.ErrMonad
                      , Model.Core.Types
                      , Model.Matcher
                      , Model.Macros
                      , Model.BibTeX.Resources
                      , Model.Parsers.BibTex
                      , Model.Parsers.Config
                      , View.View
                      , View.Help
                      , Paths_btx
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -W
  build-depends:        base >=4.7 && <5
                      , ansi-terminal
                      , attoparsec
                      , bytestring
                      , containers
                      , directory
                      , microlens
                      , mtl
                      , process
                      , temporary
                      , template-haskell
                      , text
                      , wreq

test-suite parsing
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              ModelSpec/Parsers/Config.hs
  build-depends:        base >=4.7 && <5
                      , btx-internal
                      , hspec
                      , text
  default-language:     Haskell2010

test-suite matcher
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              ModelSpec/Matcher.hs
  build-depends:        base >=4.7 && <5
                      , btx-internal
                      , hspec
                      , text
  default-language:     Haskell2010

test-suite mock
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Mock/MockApp.hs
  build-depends:        base >=4.7 && <5
                      , btx-internal
                      , directory
                      , hspec
                      , mtl
                      , text
  default-language:     Haskell2010

